@@ -1,5 +1,5 @@
 group = "com.github.haifengl"
-version = "5.2.2"
+version = "6.2.4"
 extra["isReleaseVersion"] = !version.toString().endsWith("SNAPSHOT")
 
 repositories {
@@ -8,11 +8,53 @@ repositories {
     maven { url = uri("https://jitpack.io") }
 }
 
+plugins {
+    id("jacoco")
+}
+
+jacoco {
+    toolVersion = "0.8.14"
+}
+
+tasks.withType<JacocoReport> {
+    reports {
+        xml.required.set(true)
+        html.required.set(true)
+    }
+}
+
 tasks.withType<Test>().all {
     systemProperty("org.slf4j.simpleLogger.defaultLogLevel", "debug")
-    jvmArgs("-Xmx6G", "-XX:+UseG1GC", "-XX:MaxMetaspaceSize=1024M", "-Xss4M")
-    jvmArgs("--add-opens=java.base/java.nio=ALL-UNNAMED",)
+    // Parallel streams rely on the shared ForkJoinPool.commonPool(),
+    // which is automatically sized to the number of available processors minus one.
+    // GitHub runners (typically 2-core) generally have fewer worker threads than dev machines,
+    // Set this pool to use two threads for consistenty across machines.
+    systemProperty("java.util.concurrent.ForkJoinPool.common.parallelism", "2")
+    jvmArgs("-Xmx6G", "-XX:MaxMetaspaceSize=1024M", "-Xss4M", "-XX:+UseZGC")
+    jvmArgs("-XX:+UseCompactObjectHeaders")
+    jvmArgs("-XX:+UseCompressedOops")
+    jvmArgs("-XX:ObjectAlignmentInBytes=16")
+    jvmArgs("-XX:+UseNUMA")
+    jvmArgs("-XX:+UseStringDeduplication")
+    jvmArgs("--add-opens=java.base/java.nio=ALL-UNNAMED")
     jvmArgs("--enable-native-access=ALL-UNNAMED")
+
+    val osName = System.getProperty("os.name").lowercase()
+    val libPath = file("${rootDir.path}/studio/src/universal/bin").absolutePath
+    val torchPath = file("${rootDir.path}/deep/libtorch/lib").absolutePath
+    if (osName.contains("windows")) {
+        // On Windows, DLLs are found via the PATH
+        val currentPath = System.getenv("PATH") ?: ""
+        environment("PATH", "$libPath;$torchPath;$currentPath")
+    } else if (osName.contains("mac")) {
+        // On macOS, shared libraries (.dylib) use DYLD_LIBRARY_PATH
+        val currentDyldPath = System.getenv("DYLD_LIBRARY_PATH") ?: ""
+        environment("DYLD_LIBRARY_PATH", "$libPath:$torchPath:/opt/homebrew/lib/:/usr/local/lib:$currentDyldPath")
+    } else {
+        // On Linux, shared libraries (.so) use LD_LIBRARY_PATH
+        val currentLdPath = System.getenv("LD_LIBRARY_PATH") ?: ""
+        environment("LD_LIBRARY_PATH", "$libPath:$torchPath:$currentLdPath")
+    }
 }
 
 tasks.withType<Jar>().all {
